# RTS-Assignment

./: .gitignore  Cargo.toml  DETAILED_FUNCTION_REFERENCE.md  FUNCTIONS_OVERVIEW.md  assignment_text.txt  build_errors.txt  walkthrough.md
ground_control/: Cargo.toml  REQUIREMENTS_MAPPING.md
ground_control/benches/: gcs_bench.rs  metrics_bench.rs
ground_control/logs/: ground_control_critical_alerts.csv  ground_control_deadline_ops.csv  ground_control_faults_recovery.csv  ground_control_missed_deadlines.csv  ground_control_rejected_ops.csv  ground_control_safety_interlocks.csv
ground_control/src/: command.rs  command_scheduler.rs  fault.rs  fault_management.rs  lib.rs  main.rs  monitor.rs  network.rs  network_manager.rs  performance.rs  performance_tracker.rs  system_monitor.rs  telemetry.rs  telemetry_processor.rs
logs/: batches.csv  cpu.csv  downlink.csv  drops.csv  faults.csv  ground_control_deadline_ops.csv  ground_control_faults_recovery.csv  scheduler.csv  sensors.csv  txqueue.csv
satellite_ocs/: Cargo.toml
satellite_ocs/benches/: satellite_bench.rs  scheduler.rs
satellite_ocs/logs/: batches.csv  cpu.csv  downlink.csv  drops.csv  faults.csv  scheduler.csv  sensors.csv  txqueue.csv
satellite_ocs/src/: config.rs  crypto.rs  errors.rs  lib.rs  main.rs
satellite_ocs/src/commands/: handler.rs  mod.rs
satellite_ocs/src/downlink/: mod.rs
satellite_ocs/src/faults/: mod.rs
satellite_ocs/src/health/: heartbeat.rs  mod.rs
satellite_ocs/src/logging/: csv.rs  metrics.rs  mod.rs  packets.rs
satellite_ocs/src/net/: framing.rs  mod.rs  udp.rs
satellite_ocs/src/scheduler/: mod.rs  rm.rs  timing.rs
satellite_ocs/src/sensors/: attitude.rs  mod.rs  power.rs  thermal.rs
satellite_ocs/src/telemetry/: batcher.rs  mod.rs  prio_buffer.rs
satellite_ocs/src/util/: time.rs
shared_protocol/: Cargo.toml
shared_protocol/src/: lib.rs
