[package]
name = "ground_control"
version = "0.1.0"
edition = "2024"

[dependencies]
# your shared types + crypto/framing
shared_protocol = { path = "../shared_protocol" }

# runtime + utils
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }

# serde stack
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }

# error + logging
anyhow = "1.0"
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# misc
rand = { version = "0.9.2", features = ["std"] }
sysinfo = { version = "0.37.0", features = ["serde"] }
hex = "0.4"
once_cell = "1.19"
num_cpus = "1.16"


