[package]
name = "satellite_ocs"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_protocol = { path = "../shared_protocol"}
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros", "time"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
serde_json = "1.0"
tokio-serde = { version = "0.9.0", features = ["bincode"] }
socket2 = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "6.1.0"
priority-queue = "2.5.0"
heapless = { version = "0.9.1", features = ["serde"] }
sysinfo = "0.37.0"
cpu-time = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
thiserror = "2.0.16"
anyhow = "1.0"
rand = "0.9.2"
rand_distr = "0.5.1"
config = "0.15.14"
toml = "0.9.5"
clap = { version = "4.0", features = ["derive"] }
rtsc = "0.3.17"  # Real-time synchronization components
parking_lot = "0.12"  # Fast mutexes and RwLocks
bumpalo = "3.0"  # Bump allocator for real-time systems
tokio-test = "0.4"
criterion = "0.7.0"
mockall = "0.13.1"
once_cell = "1"
crypto = "0.5.1"
hex = "0.4.3"
fault-injection = "1.0.10"
[dev-dependencies]
proptest = "1.0"  # Property-based testing

[[bench]]
name = "scheduler"
harness = false



