[package]
name = "shared_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0.16"
crc32fast = "1.5.0"            # kept but unused by wire (ok to remove later)
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
aead = "0.5.2"

